--- a/music/style.css
+++ b/music/style.css
@@ -1,6 +1,6 @@
 body {
     /* Путь к изображению относительно данного файла */
-    background-image: url(maxresdefault (3).jpg);
+    background-image: url(maxresdefault3.jpg);
  
     /* Центрирование изображения по вертикали и горизонтали всегда */
     background-position: center center;
